syncevolution (1:1.2.99.3-1) UNRELEASED; urgency=low

  * SyncEvolution 1.2.99.3 for Harmattan.
  * Patches and updates from Fremantle merged into Harmattan tree:
    - Build-Depend on automake 1.10, libtool, libboost1.42-dev,
      and libcppunit-dev.
    - Patches to new build system to work with older tools.
    - Patches to work with gcc 4.2.
    - Fixes to Maemo calendar backend.

 -- Ove Kaaven <ovek@arcticnet.no>  Sat, 11 Aug 2012 10:08:23 +0200

syncevolution (1:1.2.2-1) unstable; urgency=low

  * SyncEvolution 1.2.2 for Harmattan.

 -- Ove Kaaven <ovek@arcticnet.no>  Mon, 23 Jan 2012 23:19:33 +0100

syncevolution (1:1.2.1-1) unstable; urgency=low

  * SyncEvolution 1.2.1 for Harmattan.
  * Updated KCalExtended and QtContacts backends for new
    insertItem() signature.
  * On Harmattan, only sync contacts which have a SyncTarget of
    "addressbook", i.e. are physically stored in the phone's
    internal addressbook. This should avoid syncing all your
    Skype and Facebook contacts.
  * Packaging updates for Fremantle merged into Harmattan tree.

 -- Ove Kaaven <ovek@arcticnet.no>  Tue, 29 Nov 2011 01:59:36 +0100

syncevolution (1:1.1.99.6-2) unstable; urgency=low

  * Removed static libraries.
  * On Harmattan, re-enable iCal 2.0 UID comparisons.
  * On Harmattan, don't try to sync the fake "self" contact.

 -- Ove Kaaven <ovek@arcticnet.no>  Wed, 07 Sep 2011 23:59:44 +0200

syncevolution (1:1.1.99.6-1) unstable; urgency=low

  * SyncEvolution 1.1.99.6 for Maemo.

 -- Ove Kaaven <ovek@arcticnet.no>  Sun, 04 Sep 2011 20:42:32 +0200

syncevolution (1:1.1.99.5-1) unstable; urgency=low

  * SyncEvolution 1.1.99.5 for Maemo.
    - Built with WebDAV support.
  * Build-Depend on libneon27-gnutls-dev.
  * Depend on host (used by WebDAV backend for DNS SRV lookups).
  * Updated package description:
    - SyncEvolution now supports CalDAV/CardDAV.
    - Remove mention of ScheduleWorld, as the service shut down.