@@ -9,4 +9,89 @@ License: GNU General Public License version 2
 The Debian packaging is (C) 2007, Patrick Ohly <patrick.ohly@gmx.de> and
 is licensed under the GPL, see `/usr/share/common-licenses/GPL'.
 
+The Maemo builds were adopted by Ove Kaaven <ovek@debian.org> on
+Thu, 31 Dec 04:15:13 2009 +0100.
 
+The Harmattan packages contain embedded packages of host and libneon.
+The copyright for host is:
+
+           This package was debianized by Bdale Garbee <bdale@gag.com> on
+           Sat, 16 Dec 2000 09:53:06 -0700, by extracting host from the BIND combined
+           source package.
+
+           It was adopted by Thomas Seyrat <tomasera@debian.org> on
+           Thu, 21 Mar 2002 15:41:01 +0100.
+
+           Host was downloaded from http://www.dtek.chalmers.se/~d3august/xt/host.tar.Z
+
+           Upstream Author:	Eric Wassenaar <e07@nikhef.nl>
+
+           Copyright:
+
+           /*
+            * Copyright (c) 1985, 1989 Regents of the University of California.
+            * All rights reserved.
+            *
+            * Redistribution and use in source and binary forms are permitted
+            * provided that: (1) source distributions retain this entire copyright
+            * notice and comment, and (2) distributions including binaries display
+            * the following acknowledgement:  ``This product includes software
+            * developed by the University of California, Berkeley and its contributors''
+            * in the documentation or other materials provided with the distribution
+            * and in all advertising materials mentioning features or use of this
+            * software. Neither the name of the University nor the names of its
+            * contributors may be used to endorse or promote products derived
+            * from this software without specific prior written permission.
+            * THIS SOFTWARE IS PROVIDED ``AS IS'' AND WITHOUT ANY EXPRESS OR
+            * IMPLIED WARRANTIES, INCLUDING, WITHOUT LIMITATION, THE IMPLIED
+            * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
+            */
+
+           /*
+            * Originally, this program came from Rutgers University, however it
+            * is based on nslookup and other pieces of named tools, so it needs
+            * that copyright notice.
+            */
+
+           /*
+            * Rewritten by Eric Wassenaar, Nikhef-H, <e07@nikhef.nl>
+            *
+            * The officially maintained source of this program is available
+            * via anonymous ftp from machine 'ftp.nikhef.nl' [192.16.199.1]
+            * in the directory '/pub/network' as 'host.tar.Z'
+            *
+            * You are kindly requested to report bugs and make suggestions
+            * for improvements to the author at the given email address,
+            * and to not re-distribute your own modifications to others.
+            */
+
+The copyright for libneon is:
+
+           This package was debianized by Wolfgang Sourdeau <was@debian.org> on
+           Tue, 5 Jun 2001 23:20:50 -0400.
+           Adopted by Siggy Brentrup <bsb@debian.org> on
+           Mon, 19 Jan 2004 03:06:35 +0100
+           Adopted by Laszlo Boszormenyi (GCS) <gcs@debian.org> on
+           Mon, 21 Mar 2005 23:40:30 +0100
+
+           It was downloaded from http://www.webdav.org/neon/ .
+
+           Upstream maintainer: Joe Orton <joe@light.plus.com>
+
+           Copyright:
+
+           neon is Copyright (C) 1999-2007 Joe Orton
+
+           Portions are:
+           Copyright (C) 1999-2000 Tommi Komulainen <Tommi.Komulainen@iki.fi>
+           Copyright (C) 1999 Eric S. Raymond
+           Copyright (C) 1991, 1995, 1996, 1997 Free Software Foundation, Inc.
+
+           Neon is distributed under the GNU Library General Public License.
+           The neon documentation is distributed under the GNU General Public License
+           either version 2 of the License, or (at your option) any later version.
+
+           On Debian GNU/Linux systems, the full text of the GNU Library General Public
+           License can be found in the file /usr/share/common-licenses/LGPL-2 and the
+           GNU General Public License version 2 can be found in the file
+           /usr/share/common-licenses/GPL-2 .
